cmake_minimum_required(VERSION 3.0)
project(CMSSW)

include_directories(${CMAKE_SOURCE_DIR})
include_directories(/usr/include/)
if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xclang -fcolor-diagnostics")
endif()
include_directories(/usr/include/boost/program_options/)
include_directories(/usr/lib/sigc++-2.0/include/)
include_directories(/home/teemperor/cms/ext/coral/RelationalAccess)
include_directories(/usr/include/boost/)
include_directories(/home/teemperor/cms/ext/fastjet/include)
include_directories(/usr/include/root/)
include_directories(/home/teemperor/cms/ext/coral/CoralCommon)
include_directories(/usr/include/boost/regex/)
include_directories(/home/teemperor/cms/ext/misc/)
include_directories(/usr/include/Pythia8/)
include_directories(/usr/include/boost/iostreams/)
include_directories(/home/teemperor/cms/ext/linux-oracle-client/instantclient_12_1/sdk/include)
include_directories(/usr/include/python2.7/)
include_directories(/home/teemperor/cms/ext/coral/CoralBase)
include_directories(/home/teemperor/cms/ext/hector/Hector)
include_directories(/usr/include/sigc++-2.0/)
include_directories(/home/teemperor/cms/ext/classlib)
include_directories(/home/teemperor/cms/md5/)
include_directories(/usr/include/boost/serialization/)
include_directories(/usr/include/meschach/)
include_directories(/usr/include/Geant4/)
include_directories(/usr/include/eigen3/)
include_directories(/home/teemperor/cms/ext/fftjet)
include_directories(/usr/include/boost/python/)
include_directories(/usr/include/boost/filesystem/)
include_directories(/home/teemperor/cms/ext/coral/CoralKernel)
include_directories(/home/teemperor/CERN/root-build/include)
include_directories(/usr/include/davix/)
include_directories(/usr/include/boost/system/)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -march=native -Wno-attributes -Wno-deprecated-declarations -Wno-deprecated-register -Wno-null-dereference -std=c++14")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fmodules -Wno-module-import-in-extern-c -Xclang -fmodules-local-submodule-visibility -Rmodule-build -ivfsoverlay /home/teemperor/cms/cmssw/libs.overlay.yaml -fmodules-cache-path=${CMAKE_BINARY_DIR}/pcms/")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -H")
add_subdirectory(Alignment)
add_subdirectory(AnalysisAlgos)
add_subdirectory(AnalysisDataFormats)
add_subdirectory(BigProducts)
add_subdirectory(CalibCalorimetry)
add_subdirectory(CalibFormats)
add_subdirectory(CalibMuon)
add_subdirectory(CalibTracker)
add_subdirectory(Calibration)
add_subdirectory(CaloOnlineTools)
add_subdirectory(CommonTools)
add_subdirectory(CondCore)
add_subdirectory(CondFormats)
add_subdirectory(CondTools)
add_subdirectory(Configuration)
add_subdirectory(DPGAnalysis)
add_subdirectory(DQM)
add_subdirectory(DQMOffline)
add_subdirectory(DQMServices)
add_subdirectory(DataFormats)
add_subdirectory(DetectorDescription)
add_subdirectory(EgammaAnalysis)
add_subdirectory(ElectroWeakAnalysis)
add_subdirectory(EventFilter)
add_subdirectory(FWCore)
add_subdirectory(FastSimDataFormats)
add_subdirectory(FastSimulation)
add_subdirectory(Fireworks)
add_subdirectory(GeneratorInterface)
add_subdirectory(Geometry)
add_subdirectory(GeometryReaders)
add_subdirectory(HLTrigger)
add_subdirectory(HLTriggerOffline)
add_subdirectory(HeavyFlavorAnalysis)
add_subdirectory(HiggsAnalysis)
add_subdirectory(IOMC)
add_subdirectory(IOPool)
add_subdirectory(IORawData)
add_subdirectory(JetMETCorrections)
add_subdirectory(L1Trigger)
add_subdirectory(L1TriggerConfig)
add_subdirectory(L1TriggerOffline)
add_subdirectory(MagneticField)
add_subdirectory(Mixing)
add_subdirectory(MuonAnalysis)
add_subdirectory(OnlineDB)
add_subdirectory(PerfTools)
add_subdirectory(PhysicsTools)
add_subdirectory(QCDAnalysis)
add_subdirectory(RecoBTag)
add_subdirectory(RecoBTau)
add_subdirectory(RecoCTPPS)
add_subdirectory(RecoCaloTools)
add_subdirectory(RecoEcal)
add_subdirectory(RecoEgamma)
add_subdirectory(RecoHI)
add_subdirectory(RecoJets)
add_subdirectory(RecoLocalCalo)
add_subdirectory(RecoLocalFastTime)
add_subdirectory(RecoLocalMuon)
add_subdirectory(RecoLocalTracker)
add_subdirectory(RecoLuminosity)
add_subdirectory(RecoMET)
add_subdirectory(RecoMuon)
add_subdirectory(RecoParticleFlow)
add_subdirectory(RecoPixelVertexing)
add_subdirectory(RecoRomanPot)
add_subdirectory(RecoTBCalo)
add_subdirectory(RecoTauTag)
add_subdirectory(RecoTracker)
add_subdirectory(RecoVZero)
add_subdirectory(RecoVertex)
add_subdirectory(SLHCUpgradeSimulations)
add_subdirectory(SUSYBSMAnalysis)
add_subdirectory(SimCalorimetry)
add_subdirectory(SimDataFormats)
add_subdirectory(SimFastTiming)
add_subdirectory(SimG4CMS)
add_subdirectory(SimG4Core)
add_subdirectory(SimGeneral)
add_subdirectory(SimMuon)
add_subdirectory(SimRomanPot)
add_subdirectory(SimTracker)
add_subdirectory(SimTransport)
add_subdirectory(TBDataFormats)
add_subdirectory(TauAnalysis)
add_subdirectory(TopQuarkAnalysis)
add_subdirectory(TrackPropagation)
add_subdirectory(TrackingTools)
add_subdirectory(Utilities)
add_subdirectory(Validation)


